# platform.core.connectivity.nfc-manager

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  nfc-manager.manifest
TC/testcase/: utc_net_nfc_client_data.c  utc_net_nfc_client_exchanger.c  utc_net_nfc_client_internal_se.c  utc_net_nfc_client_ndef_message.c  utc_net_nfc_client_ndef_record.c  utc_net_nfc_client_nfc.c  utc_net_nfc_client_tag.c  utc_net_nfc_client_tag_felica.c  utc_net_nfc_client_tag_jewel.c  utc_net_nfc_client_tag_mifare.c  utc_net_nfc_client_target_info.c
client/: CMakeLists.txt  net_nfc_client_ndef_message.c  net_nfc_client_se.c  net_nfc_client_system_handler.c
common/: net_nfc_util.c  net_nfc_util_internal.h
daemon/: CMakeLists.txt  net_nfc_server.c  net_nfc_server_llcp.c  net_nfc_server_se.c  net_nfc_server_snep.c  net_nfc_server_util.c  net_nfc_server_util.h
debian/: changelog  control  libnfc-manager-0.init.in  libnfc-manager-0.install.in  libnfc-manager-0.postinst.in  rules
packaging/: libnfc-manager-0.init.in  nfc-manager.changes  nfc-manager.service  nfc-manager.socket  nfc-manager.spec
src/agent/: CMakeLists.txt  net_nfc_agent.c  net_nfc_dbus_agent_obj.c
src/agent/include/: net_nfc_agent_private.h  net_nfc_dbus_agent_obj_private.h
src/agent/resource/: com.samsung.slp.nfc.agent.service  dbus_agent.xml
src/clientlib/: CMakeLists.txt  net_nfc_client.c  net_nfc_client_context.c  net_nfc_client_data.c  net_nfc_client_dispatcher.c  net_nfc_client_exchanger.c  net_nfc_client_handover.c  net_nfc_client_hce.c  net_nfc_client_hce_ipc.c  net_nfc_client_internal_se.c  net_nfc_client_ipc.c  net_nfc_client_llcp.c  net_nfc_client_manager.c  net_nfc_client_ndef.c  net_nfc_client_ndef_message.c  net_nfc_client_ndef_message_handover.c  net_nfc_client_ndef_record.c  net_nfc_client_nfc.c  net_nfc_client_p2p.c  net_nfc_client_se.c  net_nfc_client_sign_record.c  net_nfc_client_snep.c  net_nfc_client_system_handler.c  net_nfc_client_tag.c  net_nfc_client_tag_felica.c  net_nfc_client_tag_jewel.c  net_nfc_client_tag_mifare.c  net_nfc_client_target_info.c  net_nfc_client_test.c  net_nfc_client_transceive.c  net_nfc_client_util.c
src/clientlib/include/: net_nfc.h  net_nfc_apdu.h  net_nfc_client.h  net_nfc_client_dispatcher_private.h  net_nfc_client_handover.h  net_nfc_client_hce.h  net_nfc_client_hce_ipc.h  net_nfc_client_ipc_private.h  net_nfc_client_llcp.h  net_nfc_client_manager.h  net_nfc_client_ndef.h  net_nfc_client_nfc_private.h  net_nfc_client_p2p.h  net_nfc_client_se.h  net_nfc_client_snep.h  net_nfc_client_system_handler.h  net_nfc_client_tag.h  net_nfc_client_tag_felica.h  net_nfc_client_tag_jewel.h  net_nfc_client_test.h  net_nfc_client_transceive.h  net_nfc_client_util_internal.h  net_nfc_client_util_private.h  net_nfc_data.h  net_nfc_exchanger.h  net_nfc_exchanger_private.h  net_nfc_internal_se.h  net_nfc_llcp.h  net_nfc_ndef_message.h  net_nfc_ndef_message_handover.h  net_nfc_ndef_record.h  net_nfc_sign_record.h  net_nfc_tag.h  net_nfc_tag_felica.h  net_nfc_tag_jewel.h  net_nfc_tag_mifare.h  net_nfc_target_info.h
src/commonlib/: CMakeLists.txt  net_nfc.xml  net_nfc_util.c  net_nfc_util_gdbus.c  net_nfc_util_handover.c  net_nfc_util_handover_bt.c  net_nfc_util_handover_wfd.c  net_nfc_util_handover_wps.c  net_nfc_util_hce.c  net_nfc_util_ndef_message.c  net_nfc_util_ndef_parser.c  net_nfc_util_ndef_record.c  net_nfc_util_openssl.c  net_nfc_util_sign_record.c  nfc-common-lib.pc.in
src/commonlib/include/: net_nfc_debug_internal.h  net_nfc_debug_private.h  net_nfc_oem_controller.h  net_nfc_typedef.h  net_nfc_typedef_internal.h  net_nfc_typedef_private.h  net_nfc_util_defines.h  net_nfc_util_gdbus_internal.h  net_nfc_util_handover.h  net_nfc_util_handover_internal.h  net_nfc_util_hce.h  net_nfc_util_internal.h  net_nfc_util_ndef_message.h  net_nfc_util_ndef_parser.h  net_nfc_util_ndef_record.h  net_nfc_util_openssl_private.h  net_nfc_util_private.h  net_nfc_util_sign_record.h
src/manager/: CMakeLists.txt  net_nfc_app_util.c  net_nfc_controller.c  net_nfc_dbus_service_obj.c  net_nfc_manager.c  net_nfc_manager_util.c  net_nfc_server.c  net_nfc_server_common.c  net_nfc_server_context.c  net_nfc_server_dispatcher.c  net_nfc_server_handover.c  net_nfc_server_handover_bt.c  net_nfc_server_handover_wfd.c  net_nfc_server_handover_wps.c  net_nfc_server_hce.c  net_nfc_server_hce_ipc.c  net_nfc_server_ipc.c  net_nfc_server_llcp.c  net_nfc_server_manager.c  net_nfc_server_ndef.c  net_nfc_server_p2p.c  net_nfc_server_process_handover.c  net_nfc_server_process_npp.c  net_nfc_server_process_snep.c  net_nfc_server_route_table.c  net_nfc_server_se.c  net_nfc_server_snep.c  net_nfc_server_system_handler.c  net_nfc_server_tag.c  net_nfc_server_test.c  net_nfc_server_transceive.c  net_nfc_server_vconf.c  net_nfc_service.c  net_nfc_service_llcp.c  net_nfc_service_llcp_handover.c  net_nfc_service_se.c  net_nfc_service_tag.c  net_nfc_service_vconf.c  net_nfc_util_access_control.c  org.tizen.NetNfcService.service
src/manager/addons/: net_nfc_addon_hce.c  net_nfc_addon_hce_ndef.c  net_nfc_addon_hce_ppse.c  net_nfc_addon_hce_tmoney.c  net_nfc_addons.c
src/manager/include/: net_nfc_app_util_internal.h  net_nfc_app_util_private.h  net_nfc_controller_internal.h  net_nfc_controller_private.h  net_nfc_dbus_service_obj_private.h  net_nfc_manager_util_internal.h  net_nfc_manager_util_private.h  net_nfc_server.h  net_nfc_server_addon.h  net_nfc_server_common.h  net_nfc_server_context_internal.h  net_nfc_server_dispatcher_private.h  net_nfc_server_handover.h  net_nfc_server_handover_internal.h  net_nfc_server_hce.h  net_nfc_server_hce_ipc.h  net_nfc_server_ipc_private.h  net_nfc_server_llcp.h  net_nfc_server_manager.h  net_nfc_server_p2p.h  net_nfc_server_process_handover.h  net_nfc_server_route_table.h  net_nfc_server_se.h  (+12 more)
src/plugin/: CMakeLists.txt  pkgmgr_plugin_cardemulation.c  pkgmgr_plugin_useese.c
test_clinet_app/bt_paring/: bt_paring.c
test_clinet_app/ndef-tool/: CMakeLists.txt  ndef-tool-display.c  ndef-tool-sign.c  ndef-tool-tag.c  ndef-tool.c  ndef-tool.h
test_clinet_app/nfc_client/: main.c  nfc_api_test.h
(+6 files in other folders)
